--- a/app/src/main/res/layout/activity_volatile_demo.xml
+++ b/app/src/main/res/layout/activity_volatile_demo.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customview.volumeview.VolumeActivity">
+    tools:context=".volatile_demo.VolatileDemoActivity">
 
-    <com.ck2020.cklearn.customview.volumeview.VolumeView
-        android:layout_width="200dp"
-        android:layout_height="150dp"
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="see class “VolatileMain”"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
