--- a/app/src/main/res/layout/activity_file_test.xml
+++ b/app/src/main/res/layout/activity_file_test.xml
@@ -1,43 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     tools:context=".file_read.FileTestActivity">
 
-    <EditText
-        android:id="@+id/et_file_test"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="输入存储内容" />
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/bt_file_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="保存"
-        android:textAllCaps="false" />
+        <EditText
+            android:id="@+id/et_file_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="输入存储内容" />
 
-    <TextView
-        android:id="@+id/tv_save_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="保存结果" />
+        <Button
+            android:id="@+id/bt_file_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="保存"
+            android:textAllCaps="false" />
 
-    <TextView
-        android:id="@+id/tv_file_read"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="读取结果：" />
+        <TextView
+            android:id="@+id/tv_save_result"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="保存结果" />
 
-    <Button
-        android:id="@+id/bt_file_read"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="解析"
-        android:textAllCaps="false" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_file_read"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="读取结果：" />
+
+        <Button
+            android:id="@+id/bt_file_read"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="解析"
+            android:textAllCaps="false" />
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
+
