--- a/app/src/main/res/layout/activity_verification.xml
+++ b/app/src/main/res/layout/activity_verification.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".customview.verificationview.VerificationActivity">
 
-    <com.ck2020.cklearn.customview.verificationview.VerificationView
+    <com.ck2020.cklearn.customview.verificationview.VerificationView2
         android:id="@+id/code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         app:color="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
